--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,8 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.6'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     compile group: 'com.sparkjava', name: 'spark-core', version: '2.7.2'
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.6'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
